inventory_management_system

--- a/inventory_management_system/inventory/static/css/style.css
+++ b/inventory_management_system/inventory/static/css/style.css
@@ -11,3 +11,7 @@
   border-width: 2px;
   padding: 15px;
 }
+
+body {
+  background-image: url('C:\Users\saurabh saini\OneDrive\Desktop\project clone\inventory_management\inventory_management_system\inventory\static\images\logo.png');
+}
