--- a/inventory_management_system/inventory/templates/inv/base.html
+++ b/inventory_management_system/inventory/templates/inv/base.html
@@ -2,16 +2,24 @@
 <html>
   <head>
     <title>Inventory</title>
+
   </head>
 
+
   {% load static %}
+
+<head>
+    <title>Inventory Management System</title>
+</head>
+
+
+
   <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}"/>
   <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap.min.css' %}"/>
 
-  <body>
 
     <nav class="navbar navbar-expand navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Management System</a>
+  <a class="navbar-brand" href="#">Inventory Management System  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
