--- a/inventory_management_system/inventory/templates/inv/index.html
+++ b/inventory_management_system/inventory/templates/inv/index.html
@@ -1,73 +1,101 @@
 {% extends 'inv/base.html' %}
+{% load static %}
 
 {% block body %}
 
-  <div class="add_buttons">
+<div class="add_buttons">
+  <div class="button-group">
+    <a href="{% url 'display_laptops' %}" class="btn btn-primary btn-md btn-trim" role="button"> Laptops</a>
+    <a href="{% url 'add_laptop' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
 
-    <div class="button-group">
-      <a href="{% url 'display_laptops' %}" class="btn btn-primary btn-md btn-trim" role="button"> Laptops</a>
-      <a href="{% url 'add_laptop' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
+    <a href="{% url 'display_desktops' %}" class="btn btn-primary btn-md btn-trim" role="button"> Desktops</a>
+    <a href="{% url 'add_desktop' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
 
-      <a href="{% url 'display_desktops' %}" class="btn btn-primary btn-md btn-trim" role="button"> Desktops</a>
-      <a href="{% url 'add_desktop' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
+    <a href="{% url 'display_mobiles' %}" class="btn btn-primary btn-md btn-trim" role="button"> Mobiles</a>
+    <a href="{% url 'add_mobile' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
 
-      <a href="{% url 'display_mobiles' %}" class="btn btn-primary btn-md btn-trim" role="button"> Mobiles</a>
-      <a href="{% url 'add_mobile' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
+    <a href="{% url 'display_printers' %}" class="btn btn-primary btn-md btn-trim" role="button"> Printers</a>
+    <a href="{% url 'add_printer' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
 
-    </div>
+    <a href="{% url 'display_routers' %}" class="btn btn-primary btn-md btn-trim" role="button"> Routers</a>
+    <a href="{% url 'add_router' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
 
+    <a href="{% url 'display_toughpad' %}" class="btn btn-primary btn-md btn-trim" role="button"> Toughpad</a>
+    <a href="{% url 'add_toughpad' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
+
+    <a href="{% url 'display_toughbook' %}" class="btn btn-primary btn-md btn-trim" role="button"> Toughbook</a>
+    <a href="{% url 'add_toughbook' %}" class="btn btn-warning btn-sm btn-pad" role="button"> +</a>
   </div>
+</div>
 
-  <div>
+<div>
+  <h4>Currently Viewing {{ header }}</h4>
+</div>
 
-    <h4>Currently Viewing {{ header }}</h4>
-  </div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th>id</th>
+      <th>Model</th>
+      <th>Price</th>
+      <th>username</th>
+      <th>Department</th>
+      <th>Status</th>
+      <th>Issues</th>
+      <th></th>
+    </tr>
+  </thead>
 
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>id</th>
-        <th>Model</th>
-        <th>Price</th>
-        <th>Status</th>
-        <th>Issues</th>
-        <th></th>
-      </tr>
-    </thead>
-
-    <tbody>
-
-      {% for item in items %}
-
-      <tr>
-        <td>{{ item.pk }}
-        <td>{{ item.type }}</td>
-        <td>{{ item.price }} $</td>
-        <td>{{ item.status }}</td>
-        <td>{{ item.issues }}</td>
-
-        {% if header|lower == "laptops" %}
-        <td>
-            <a href="{% url 'edit_laptop' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true" > Edit</a>
-            <a href="{% url 'delete_laptop' item.pk%}" class="btn btn-danger btn-sm" role="button" aria-pressed="true" > x</a>
-        </td>
-        {% elif header|lower == "desktops" %}
-        <td>
-            <a href="{% url 'edit_desktop' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true" > Edit</a>
-            <a href="{% url 'delete_desktop' item.pk%}" class="btn btn-danger btn-sm" role="button" aria-pressed="true" > x</a>
-        </td>
-        {% else %}
-        <td>
-            <a href="{% url 'edit_mobile' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true" > Edit</a>
-            <a href="{% url 'delete_mobile' item.pk%}" class="btn btn-danger btn-sm" role="button" aria-pressed="true" > x</a>
-        </td>
-        {% endif %}
-
-
-      </tr>
-
-      {% endfor %}
-    </tbody>
-  </table>
+  <tbody>
+    {% for item in items %}
+    <tr>
+      <td>{{ item.pk }}</td>
+      <td>{{ item.type }}</td>
+      <td>{{ item.price }} ₹</td>
+      <td>{{ item.user_name }}</td>
+      <td>{{ item.department }}</td>
+      <td>{{ item.status }}</td>
+      <td>{{ item.issues }}</td>
+      
+      {% if header|lower == "laptops" %}
+      <td>
+        <a href="{% url 'edit_laptop' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true"> Edit</a>
+        <a href="{% url 'delete_laptop' item.pk %}" class="btn btn-danger btn-sm" role="button" aria-pressed="true"> x</a>
+      </td>
+      {% elif header|lower == "desktops" %}
+      <td>
+        <a href="{% url 'edit_desktop' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true"> Edit</a>
+        <a href="{% url 'delete_desktop' item.pk %}" class="btn btn-danger btn-sm" role="button" aria-pressed="true"> x</a>
+      </td>
+      {% elif header|lower == "mobiles" %}
+      <td>
+        <a href="{% url 'edit_mobile' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true"> Edit</a>
+        <a href="{% url 'delete_mobile' item.pk %}" class="btn btn-danger btn-sm" role="button" aria-pressed="true"> x</a>
+      </td>
+      {% elif header|lower == "printers" %}
+      <td>
+        <a href="{% url 'edit_printers' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true"> Edit</a>
+        <a href="{% url 'delete_printer' item.pk %}" class="btn btn-danger btn-sm" role="button" aria-pressed="true"> x</a>
+      </td>
+      {% elif header|lower == "routers" %}
+      <td>
+        <a href="{% url 'edit_routers' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true"> Edit</a>
+        <a href="{% url 'delete_router' item.pk %}" class="btn btn-danger btn-sm" role="button" aria-pressed="true"> x</a>
+      </td>
+      {% elif header|lower == "toughpad" %}
+      <td>
+        <a href="{% url 'edit_toughpad' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true"> Edit</a>
+        <a href="{% url 'delete_toughpad' item.pk %}" class="btn btn-danger btn-sm" role="button" aria-pressed="true"> x</a>
+      </td>
+      {% elif header|lower == "toughbook" %}
+      <td>
+        <a href="{% url 'edit_toughbook' item.pk %}" class="btn btn-warning btn-sm" role="button" aria-pressed="true"> Edit</a>
+        <a href="{% url 'delete_toughbook' item.pk %}" class="btn btn-danger btn-sm" role="button" aria-pressed="true"> x</a>
+      </td>
+      {% endif %}
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
 
 {% endblock %}
